--- a/biodata.html
+++ b/biodata.html
@@ -70,3 +70,86 @@ a:hover {
 }
     </style>
 </head>
+<body>
+    <div class="resume-container">
+        <header>
+            <h1>Flesha Surani</h1>
+            <p>Email: <a href="fleshasurani2922@gmail.com">fleshasurani2922@gmail.com</a> | Phone: +91 8866499522 | GitHub: <a href="#">URL</a> | LinkedIn: <a href="#">Flesha</a></p>
+        </header>
+        <section>
+            <h2>Education</h2>
+            <ul>
+                <li>
+                    <strong>Pimpri Chinchward University, Pune, India</strong><br>
+                    B.Tech in Computer Science and Engineering <br>
+                    Sem I: GPA: 7.4/10.0 | Expected Graduation: May 2028
+                </li>
+                <li>
+                    <strong>Dholakiya International School, Gondal, India</strong><br>
+                    Intermediate | Persent:72% | June 2024
+                </li>
+                <li>
+                    <strong>Saint Mary's School, Gondal, India</strong><br>
+                    SSC | Persent:80% | March 2022
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Technical Skills</h2>
+            <ul>
+                <li><strong>Programming Languages:</strong>  Java, Python, C++</li>
+                <li><strong>Tools:</strong> Git, JupyterLab</li>
+                <li><strong>Front-End:</strong> HTML, CSS, JavaScript, React.js</li>
+                <li><strong>Back-End:</strong> Node.js</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Internships</h2>
+            <div>
+                <h3>No Internship till now.</h3>
+                <!-- <p><strong>Full Stack Developer Intern</strong></p> -->
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li>
+                    <strong>Work on Hotal website as Freelancer</strong> <!--(<a href="#">GitHub</a>)--> | Sep-Nov 2022<br>
+                    Designed and developed a full-stack e-commerce platform using HTML, CSS, JS, React and Node.js. <br>
+                    - Implemented a payment gateway and multi-layered secure user authentication.<br>
+                    - Optimized database queries, reducing page load time by 40%.
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Certificates</h2>
+            <ul>
+                <li>Certificate on Cloud Computing - Coursera | June 2024</li>
+                <li>Certificate on DevOps - Amazon | August 2024</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Coding Profiles</h2>
+            <ul>
+                <li>LeetCode: 10+ Problems Solved | Rank: 2024</li>
+                <li>HackerRank: 0 Problems Solved</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Leadership</h2>
+            <p>Clultural Captain at School</p>
+        </section>
+        <section>
+            <h2>Honours and Achievements</h2>
+            <ul>
+                <li>Till now no Achievements.</li>
+                <li></li>
+
+            </ul>
+        </section>
+    </div>
+</body>
+</html>
